Fix broken CSS on subscriptions SHOW page

--- a/app/static/styles/subscriptions.css
+++ b/app/static/styles/subscriptions.css
@@ -94,11 +94,11 @@ div#subscription-site-content-2 {
     padding: 5px;
 }
 
-div#subscription-intervals {
+section#subscription-intervals {
     width: 50%;
 }
 
-div#subscription-job {
+section#subscription-job {
     width: 50%;
 }
 
